<resources>
    <string name="app_name">i am job</string>
    <string name="jobs">Jobs</string>
    <string name="saved">Saved</string>
    <string name="notifications">Notifications</string>
    <string name="apply_fiter">Apply filter</string>
    <string name="no_jobs_saved_description">It looks like you haven\'t saved any jobs yet. You can save jobs by tapping on bookmark icons next to an item in the Jobs tab.</string>
    <string name="filter_description_hint">Title, benefits, company, expertise</string>
    <string name="filter_location_hint">City, state, zip code, or country</string>
    <string name="full_time">Full time</string>
    <string name="save_filter">Save this filter</string>
    <string name="no_results_message">No results were found</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="company_details">&lt;a href=%1$s>%2$s&lt;/a></string>
    <string name="how_to_apply">How to apply: %1$s</string>
    <string name="no_filters_message">Here you can subscribe to updates from your saved filters, but it looks like you haven\'t saved any yet! Click the floating button in the Jobs tab, define a filter, then check the \"Save filter\" checkbox and then they\'ll show up here.</string>
    <string name="notification_frequency">Notification frequency</string>
    <string name="subscription_description">Get notifications when filters you\'ve defined in the Jobs tab have yielded new search results.</string>
    <string name="share_with">Share with:</string>
    <string-array name="notification_frequencies">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="new_results">%1$d new jobs(s)!</string>
    <string name="clear_filter_content_desc">Clear filter</string>
    <string name="toggle_subscription_content_desc">Toggle subscription</string>
    <string name="save_position_content_desc">Save position</string>
    <string name="remove_filter_content_desc">Remove filter</string>
</resources>
